style.css: fixed the scrollbar, and its styling specific for browsers and more styles

--- a/famepropertiesng/src/css/style.css
+++ b/famepropertiesng/src/css/style.css
@@ -10,6 +10,7 @@ html, #root {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   height: 100%; /* Full height for the page */
+  overflow-x: hidden;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
@@ -25,6 +26,7 @@ body {
   color: #6C757D;
   text-align: left;
   background-color: #F8F6F2;
+  /* overflow-x: hidden; */
 }
 
 #root {
@@ -231,10 +233,10 @@ button {
   border-radius: 0;
 }
 
-button:focus {
+/* button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
-}
+} */
 
 input,
 button,
@@ -5048,6 +5050,10 @@ button.bg-light:focus {
   background-color: #475569 !important;
 }
 
+.bg-lite {
+  background-color: #f8f6f2 !important;
+}
+
 a.bg-dark:hover, a.bg-dark:focus,
 button.bg-dark:hover,
 button.bg-dark:focus {
@@ -6167,6 +6173,10 @@ button.bg-dark:focus {
   font-style: italic !important;
 }
 
+.font-underline {
+  text-decoration: underline !important;
+}
+
 .text-white {
   color: #fff !important;
 }
@@ -6561,6 +6571,14 @@ button:disabled,
   pointer-events: none;     /* completely prevents hover */
 }
 
+.btn-color-dark {
+  background-color: #475569 !important;
+  border: none;
+}
+.btn-color-dark:focus {
+  border: none;
+}
+
 .custom-upload-btn {
   /* background-color: #4f46e5; */
   color: white;
@@ -6570,6 +6588,7 @@ button:disabled,
   /* font-weight: bold; */
   transition: 0.2s ease;
   text-wrap: nowrap;
+  border: none;
 }
 .custom-upload-btn:hover {
   color: #475569;
@@ -6591,36 +6610,56 @@ button:disabled,
 }
 
 /* ################################################# */
+/* ====================
+   Number Input (remove arrows)
+==================== */
 
-/* For Firefox */
-* {
-  scrollbar-width: thin; /* 'auto' or 'thin' */
-  scrollbar-color: #475569 transparent; /* thumb color | track color */
+/* Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-/* For Chrome, Edge, Safari */
-/* Target the scrollbar */
-::-webkit-scrollbar {
-  width: 8px; /* vertical scrollbar width */
-  height: 8px; /* horizontal scrollbar height */
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
-/* Track (background of the scrollbar) */
-::-webkit-scrollbar-track {
-  background: #1e293b; /* dark background */
-  border-radius: 4px;
+/* ====================
+   Firefox
+==================== */
+@-moz-document url-prefix() {
+  * {
+    scrollbar-width: thin;                  /* 'auto' or 'thin' */
+    scrollbar-color: #475569 transparent;   /* thumb | track */
+  }
 }
 
-/* Thumb (draggable part) */
-::-webkit-scrollbar-thumb {
-  background: #475569; /* grey-blue */
-  border-radius: 4px;
+/* ====================
+WebKit (Chrome, Edge, Safari)
+==================== */
+@supports selector(::-webkit-scrollbar) {
+  ::-webkit-scrollbar {
+    width: 8px;   /* vertical */
+    height: 8px;  /* horizontal */
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #1e293b;
+    border-radius: 4px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #475569;
+    border-radius: 4px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #1e293b;
+  }
 }
 
-/* Thumb hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #94a3b8;
-}
 
 /* toast styling */
 .custom_toast {
